Use StringUtils for truncation helpers